site/content/xap/9.7/dev-java/index.markdown
---
type: post97
title:  Java Developers Guide
categories: XAP97
weight: 100
---


This guide introduces the key concepts for building XAP applications. The topics in this guide span installation, tutorials, the XAP API, Processing Unit, web application support, Space replication, platform interoperability and security.


{{<wbr>}}

{{% fpanel %}}
[Installation](./installation.html){{<wbr>}}
This guide provides step by step instructions on how to download and install XAP on different operating systems for the supported languages.

[Getting started](./tutorials.html){{<wbr>}}
Here you will find a quick start guide that explains how to deploy and use a GigaSpace XAP Data Grid. A full Java tutorial is also provided that will introduce you to the basic capabilities and features of the XAP platform.

[XAP API](./programmers-guide.html){{<wbr>}}
The guide provides all the information and tools needed to quickly develop either basic or more complex scaled-out applications

[The Processing Unit](./the-processing-unit-overview.html){{<wbr>}}
The Processing Unit is the unit of packaging and deployment in the GigaSpaces XAP platform. This section describes its directory structure, deployment descriptor and SLA definition and configuration.

[Elastic Processing Unit](./elastic-processing-unit-overview.html){{<wbr>}}
How to deploy and manage an Elastic Processing Unit (EPU).

[Web Application Support](./web-application-overview.html){{<wbr>}}
XAP's integration with the Service Grid allows you to deploy web applications (packaged as a WAR file) onto the Service Grid.

[Space Replication](./multi-space-replication-overview.html){{<wbr>}}
Multiple space replication is the ability to replicate state between different deployed spaces, i.e different cluster of space instances.

[Multi Site Replication](./multi-site-replication-overview.html){{<wbr>}}
Multiple site replication is the ability to replicate state between different deployed spaces, where each space can be also physically located in a different geographical location (also termed a different deployment site).

[Platform Interoperability](./interoperability-overview.html){{<wbr>}}
The possibility for organizations whose projects include a combination of Java, .NET and C++ platforms to communicate and access each other easily and efficiently while also maintaining the benefits of the XAP scale-out application server.

{{%/fpanel%}}

